# project_apex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  lcov.info  lcov_parse_single_attribute.info  test_expr.rs
apex/: Cargo.toml
apex/src/: action.rs  helpers.rs  init_data.rs  lib.rs  navigation.rs  prelude.rs  router.rs  server_context.rs  signal.rs  signals.rs  template.rs
apex_components/: Cargo.toml
apex_components/src/: lib.rs  link.rs
apex_macro/: Cargo.toml  lcov.info
apex_macro/src/: component.rs  lib.rs  route.rs
apex_macro/src/common/: mod.rs  to_pascal_case.rs
apex_macro/src/component/: generate_component.rs  generate_component_field_setters.rs  is_html_type.rs  mod.rs  parse_component_args.rs  parse_props.rs  parse_slots.rs  validate_component_function.rs
apex_macro/src/route/: generate_children_method.rs  generate_route.rs  loader_data_macro.rs  mod.rs  parse_route_args.rs
apex_macro/src/route/generate_route/: extract_params_name.rs  generate_children_method.rs  generate_outlet_helpers.rs  mod.rs  validate_route_function.rs
apex_macro/src/tmpl/: generate_component_code.rs  generate_event_listeners.rs  generate_html_opening_tag_code.rs  generate_render_parts.rs  mod.rs  parse_component_attributes_from_str.rs  parse_single_attribute.rs  parse_tag_content.rs  parse_tag_name_and_attributes.rs  parse_tmpl.rs  parse_tmpl2.rs  parse_tmpl_into_ast.rs  parse_tmpl_structure.rs  parse_tmpl_with_context.rs  parse_variable_content.rs  render_ast.rs  render_ast2.rs
apex_macro/src/tmpl/parse_tmpl_into_ast/: asdf.rs  is_pascal_case.rs  match_chars.rs  mod.rs  parse_conditional_directive.rs  parse_directive_name.rs  parse_directive_params.rs  parse_element_opening_tag.rs  parse_slot_interpolation.rs  parse_slot_name.rs  process_chars_until.rs
apex_macro/tests/: test_component.rs  test_component_wasm.rs  test_route.rs  test_tmpl.rs  test_tmpl_render.rs
apex_macro/tests/helpers/: mod.rs
apex_router/: Cargo.toml
apex_router/src/: client_router.rs  get_matched_path.rs  init_data.rs  lib.rs  server_router.rs
apex_router/tests/: server_router_test.rs
apex_utils/: Cargo.toml
apex_utils/src/: lib.rs
examples/: outlet_template_example.md
examples/asdf/: Cargo.toml  README.md
examples/asdf/src/: lib.rs
examples/asdf/static/: asdf.d.ts  asdf.js  asdf_bg.wasm  asdf_bg.wasm.d.ts
examples/calculator/: Cargo.toml  Trunk.toml  index.html  justfile  styles.css
examples/calculator/src/: lib.rs
examples/calculator/src/components/: button.rs  card.rs  mod.rs
examples/calculator/src/routes/: about.rs  calculator.rs  mod.rs  root.rs
examples/calculator/static/: client.d.ts  client.js  client_bg.wasm  client_bg.wasm.d.ts  init.js  styles.css
examples/counter/: Cargo.toml  README.md  index.html
examples/counter/src/: lib.rs  main.rs
