[package]
name = "apex"
version = "0.1.0"
edition = "2024"

[dependencies]
# WASM-compatible dependencies (available for all targets)
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3", features = ["Window", "Document", "Element", "Event", "HtmlInputElement", "NodeList", "console"] }
bytes = "^1.0"
futures-util = "^0.3"
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = ["full"] }
apex_macro = { path = "../apex_macro" }

# Server-side dependencies (excluded for WASM targets)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1.0", features = ["full"] }
hyper = { version = "^1.0", features = ["full"] }
hyper-util = { version = "^0.1", features = ["tokio"] }
http = "^1.0"
http-body-util = "^0.1"
tower = "^0.5"
axum = { version = "^0.8" }

[features]
console_error_panic_hook = []
