[package]
name = "apex"
version = "0.1.0"
edition = "2024"

[dependencies]
# WASM-compatible dependencies (available for all targets)
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3", features = [
  "Window", "Document", "Element", "HtmlButtonElement", "HtmlDivElement", "Comment", "TreeWalker", "NodeFilter", "Node", "NodeList", "Text", "Event", "console", "NodeList", "NodeIterator", "History", "Location", "PopStateEvent", "CustomEvent", "CustomEventInit", "Response", "Request", "RequestInit", "Headers", "EventListener"
] }
js-sys = "^0.3"
bytes = "^1.10"
futures-util = "^0.3"
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = ["full"] }
apex_macro = { path = "../apex_macro" }
apex_router = { path = "../apex_router" }
apex_utils = { path = "../apex_utils" }

# WASM-side only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
console_error_panic_hook = { version = "^0.1", optional = true }

# Server-side dependencies (excluded for WASM targets)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1.45", features = ["full"] }
hyper = { version = "^1.6", features = ["full"] }
hyper-util = { version = "^0.1", features = ["tokio"] }
http = "^1.3"
http-body-util = "^0.1"
lazy_static = "1.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[features]
wasm = ["dep:console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
