[package]
name = "apex_macro"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2", features = ["full", "extra-traits"] }

[dev-dependencies]
prettyplease = "^0.2"
apex = { path = "../apex" }
wasm-bindgen-test = "^0.3"
wasm-bindgen-futures = "^0.4"
js-sys = "^0.3"
