[package]
name = "apex_macro"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2", features = ["full", "extra-traits"] }
regex = "^1"

[dev-dependencies]
prettyplease = "^0.2"
apex = { path = "../apex" }
wasm-bindgen-test = "^0.3"
wasm-bindgen-futures = "^0.4"
wasm-bindgen = "^0.2"
js-sys = "^0.3"
web-sys = { version = "^0.3", features = ["Window", "Document", "Element", "HtmlButtonElement", "HtmlDivElement"] }