[package]
name = "apex_router"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
matchit = "0.8.6"
web-sys = { version = "^0.3", features = [
  "Window", "Document", "Element", "HtmlButtonElement", "HtmlDivElement", "Comment", "TreeWalker", "NodeFilter", "Node", "NodeList", "Text", "Event", "console", "NodeList", "NodeIterator", "History", "Location", "PopStateEvent", "CustomEvent", "CustomEventInit", "Response", "Request", "RequestInit", "Headers", "EventListener"
] }
wasm-bindgen = "^0.2"
lazy_static = "1.5.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
js-sys = "^0.3"
apex_utils = { path = "../apex_utils" }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
