[package]
name = "asdf"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
required-features = ["server"]

[dependencies]
# Core dependencies (always included)
apex = { path = "../../apex" }
apex_macro = { path = "../../apex_macro" }

# WASM-specific dependencies
wasm-bindgen = "0.2"
web-sys = { version = "^0.3", features = [
  "Window", "Document", "Element", "HtmlButtonElement", "HtmlDivElement", "Comment", "TreeWalker", "NodeFilter", "Node", "NodeList", "Text"
] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server-side dependencies (excluded for WASM)
tokio = { version = "^1", features = ["full"] }
sqlx = { version = "^0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
http = { version = "^1" }
axum = { version = "^0.8" }
hyper = { version = "^1" }
bytes = { version = "^1.10" }
http-body-util = { version = "^0.1" }
tower = { version = "^0.5" }
tower-http = { version = "^0.6", features = ["fs"] }

[lints]
workspace = true

[features]
default = []
wasm = ["dep:console_error_panic_hook"]
server = []
