[package]
name = "calculator"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "client"

[[bin]]
name = "server"

[dependencies]
# Core dependencies (always included)
apex = { path = "../../apex" }
apex_macro = { path = "../../apex_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server-side dependencies (excluded for WASM)
tokio = { version = "^1", features = ["full"] }
sqlx = { version = "^0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
http = { version = "^1" }

hyper = { version = "^1" }
hyper-util = { version = "^0.1", features = ["tokio"] }
bytes = { version = "^1.10" }
http-body-util = { version = "^0.1" }



[lints]
workspace = true

[features]
default = []
wasm = ["dep:console_error_panic_hook"]
